--- a/index.html
+++ b/index.html
@@ -6,18 +6,47 @@
     <title>loops-assignment</title>
 </head>
 <body>
+<!-- Q2 -->
 <!-- <p id="output" ></p> -->
 
+<!-- Q3 -->
 <!-- <div id="names"></div> -->
 
-
-
+<!-- Q6 -->
 <!-- <p id="status">Welcome!</p> -->
 
-
+<!-- Q7 -->
 <!-- <p id="sum"></p> -->
 
-<div  id="cities" ></div>
+<!-- Q8-->
+<!-- <div  id="cities" ></div> -->
+
+<!-- Q10-->
+ <!-- <p id="max" ></p> -->
+
+
+<!-- Q11-->
+<!-- <div  id="result"> <h1>Welcome!</h1> </div> -->
+
+
+<!-- Q12-->
+<!-- <div  id="averageTemp"></div> -->
+
+
+
+<!-- Q13-->
+ <!-- <p id="totalSum"></p> -->
+
+
+
+<!-- Q14-->
+ <!-- <p id="animals"></p> -->
+
+
+
+<!-- Q15-->
+ <!-- <h1 id="title" >Hello Javascript</h1> -->
+
 
 
  <script src="app.js"></script>   
