--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
  <!-- <h1 id="title" >Hello Javascript</h1> -->
 
 
+<!-- Q17-->
+ <!-- <div id="highScores"><h1></h1></div> -->
+
+ <!-- Q18-->
+    <!-- <h1 id="message" >Hello Javascript</h1>  -->
+
+
+     <!-- Q19-->
+<!-- <p id="subjectsList" ></p> -->
+
+
 
  <script src="app.js"></script>   
 </body>
